created create cards function/elements/attributes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+
     <button type="button" id="create">Create</button>
-    <div>
-        <input type="text" name="textArea" id="textArea">
-    </div>
+    
+    <div id="newTextArea"></div>
 </body>
 <script src="cards.js"></script>
 </html>
