getting close to js working

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea name="" id="textArea" cols="30" rows="10"></textarea>
 
     <button type="button" id="create">Create</button>
     
